Created Job component and listing the jobs

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&family=Spartan:wght@500;700&display=swap');
 
+:root {
+  --primary-color: #5ea6a5;
+  --primary-light-color: hsl(180, 52%, 96%);
+  --primary-dark-color: hsl(180, 8%, 52%);
+  --primary-very-dark-color: hsl(180, 14%, 20%);
+  --white-color: hsl(0, 0%, 100%);
+}
+
 *,
 *::before,
 *::after {
@@ -14,9 +22,11 @@ html {
 }
 
 body {
-  min-height: 100vh;
   width: 100%;
+  min-height: 100vh;
   font-size: 1.5rem;
+  font-weight: 500;
+  background-color: var(--primary-light-color);
 }
 
 img {
@@ -35,4 +45,21 @@ li {
 
 a {
   text-decoration: none;
+}
+
+
+/* ---- */
+.header {
+  background-image: url('../public/images/bg-header-desktop.svg');
+  background-size: cover;
+  background-color: var(--primary-color);
+  height: 15rem;
+}
+
+.container {
+  width: 100%;
+  max-width: 144rem;
+  height: 4rem;
+  margin: 0 auto;
+  padding: 0 15rem;
 }
