--- a/src/components/Filter/styles.css
+++ b/src/components/Filter/styles.css
@@ -1,22 +1,23 @@
 .filter {
     display: flex;
     align-items: center;
-    padding: 2.4rem 4rem;
-    transform: translateY(50%);
+    padding: 2rem 4rem;
+    transform: translateY(-50%);
     border-radius: 5px;
     background-color: var(--white-color);
-    box-shadow: 0px 10px 15px rgba(94, 166, 165, .2);
+    box-shadow: var(--shadow-component);
 }
 
 .filter__tags {
     display: flex;
+    flex-wrap: wrap;
     gap: 1.6rem;
 }
 
 .filter__tag {
     display: inline-flex;
     align-items: center;
-    background-color: var(--primary-light-color);
+    background-color: var(--neutral-light-color);
 }
 
 .filter__tag__txt {
@@ -25,7 +26,7 @@
     border-bottom-left-radius: 5px;
     font-size: 1.3rem;
     font-weight: bold;
-    background-color: var(--primary-light-color);
+    background-color: var(--neutral-light-color);
     color: var(--primary-color);
 }
 
@@ -37,21 +38,29 @@
 }
 
 .filter__tag__btn:hover {
-    background-color: var(--primary-very-dark-color);
+    background-color: var(--neutral-very-dark-color);
 }
 
 .filter__clear-area {
     flex: 1;
+    margin-left: .8rem;
     text-align: end;
 }
 
 .filter__clear-btn {
     flex: 1;
+    font-size: 1.5rem;
     font-weight: 700;
-    color: var(--primary-dark-color);
+    color: var(--neutral-dark-color);
 }
 
 .filter__clear-btn:hover {
     text-decoration: underline;
     color: var(--primary-color);
+}
+
+@media (max-width: 800px) {
+    .filter {
+        padding: 2rem 2.4rem;
+    }
 }
